# billabuddy

./: package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.css  routeTree.gen.ts
src-tauri/: .gitignore  Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/db/: models.rs
src-tauri/migrations/2025-02-02-003214_create_timestamp/: down.sql  up.sql
src-tauri/src/: lib.rs  main.rs  schema.rs
src/components/database/: db.ts
src/components/services/: timeEntries.ts  user.ts
src/lib/: constants.ts
src/routes/: __root.tsx  index.tsx  pomodoro.tsx  settings.tsx
src/routes/onboard/: new.tsx  switch.tsx
src/types/: models.d.ts
